--- a/app/config.ini
+++ b/app/config.ini
@@ -1,6 +1,8 @@
 [uwsgi]
 
 socket = 127.0.0.1:4242
+chdir = /home/bear/cs373-idb/app
 module = funruns:app
 master = true
 processes = 5
+virtualenv = /home/bear/cs3730idb/sweEnv
