NGINX USWGI working with database, fixing up themes

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -1,7 +1,9 @@
 [uwsgi]
 
-socket = 127.0.0.1:4242
-chdir = /home/bear/cs373-idb/app
-module = funruns:app
-master = true
-processes = 5
+http-socket = :8000
+plugin = python3
+virtualenv = /home/bear/cs373-idb/sweEnv
+callable = app
+lazy = true
+lazy-apps = true
+module = funruns
