--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 # command to install dependencies
 install:
   #- "pip install --upgrade pip" 
-  #- "pip install -r requirements.txt"
+  - "pip install -r requirements.txt"
 # command to run tests
 script: bash travisScript.bash
 branches:
