documentation for travis

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -4,8 +4,7 @@ http-socket = :8000
 plugin = python3
 virtualenv = /home/bear/cs373-idb/sweEnv
 callable = app
-lazy = true
-lazy-apps = true
 module = funruns
 threads = 4
-processes = 4
+processes = 2
+listen = 128
