--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 coverage==3.7.1
-epydoc==3.0.1
 Flask==0.10.1
 Flask-RESTful==0.3.2
 Flask-SQLAlchemy==2.0
 Jinja2==2.7.3
 psycopg2==2.6
+Sphinx==1.3.1
 SQLAlchemy==0.9.9
