Working on buttons

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -5,6 +5,9 @@ plugin = python3
 virtualenv = /home/bear/cs373-idb/sweEnv
 callable = app
 module = funruns
+enable-threads = true
 threads = 4
+processes = 1
 listen = 128
 harakari = 20
+http-timeout = 20
